<resources>
    <string name="app_name">FakeMessenger</string>
    <string name="call_new_activity">CALL ACTIVITY</string>
    <string name="editText_msg_hint">Insira sua mensagem</string>
    <string name="new_activity">New Activity</string>
    <string name="button_label_call_answer">Call for answer</string>
    <string name="send">Send</string>
    <string name="answer_hint">Escreva</string>
</resources>
