<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_message"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/editText_msg_hint"
        android:autofillHints="@string/editText_msg_hint"
        android:inputType="textCapSentences" />
    <Button
        android:id="@+id/button_new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_new_activity"
        android:layout_marginHorizontal="16dp"
        android:onClick="callNewActivity"/>
    <Button
        android:id="@+id/button_new_activity_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_call_answer"
        android:layout_marginHorizontal="16dp"
        android:onClick="callNewActivityForResult"/>
    <TextView
        android:id="@+id/textView_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Answered text"
        android:layout_margin="16dp"/>

</LinearLayout>